--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -1,4 +1,8 @@
 body{
-    background-color: black;
-    color: white;
+    background-color: #023047;
+    color: #F6F6F6;
+}
+
+.highlightTitle{
+    color: #ffb703;
 }
