--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -43,3 +43,20 @@ img{
     font-size: 24px;
     font-family: "Montserrat", sans-serif;
 }
+
+.presentation__links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.presentation__links__link{
+    background-color: #ffb703;
+    width: 190px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: "Montserrat", sans-serif;
+}
