--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -27,11 +27,14 @@ img{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10%;
+    margin: 10% 15%;
 }
 
 .presentation__content{
     width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     
 }
 
@@ -46,17 +49,26 @@ img{
 
 .presentation__links{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+}
+
+.presentation__links__subtitle{
+    font-family: "Krona One", sans-serif;
+    font-weight: 400;
 }
 
 .presentation__links__link{
-    background-color: #ffb703;
-    width: 190px;
+   /*  background-color: #ffb703; */
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     font-family: "Montserrat", sans-serif;
+    border: 2px solid #ffb703;
 }
