--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -12,6 +12,13 @@ body{
     
 }
 
+.cabecalho__menu__link{
+    font-family: 'montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #ffb703;
+}
+
 .imagem__perfil{
     height: 300px;
     width: 300px;
@@ -27,14 +34,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10% 15%;
+    padding: 8% 15%;
 }
 
 .presentation__content{
     width: 615px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 20px;
     
 }
 
@@ -71,9 +78,27 @@ body{
     color: #ffffff;
     font-family: "Montserrat", sans-serif;
     border: 2px solid #ffb703;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
 }
 
 .presentation__links__link img{
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;     
+}
+
+.presentation__links__link:hover{
+    background-color: #272727;
+}
+
+.rodape{
+    color: #000; 
+    background-color: #ffb703;
+    padding: 24px;
+    text-align: center;
+    font-family: 'montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
