--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -12,6 +12,15 @@ body{
     
 }
 
+.cabecalho{
+    padding: 2% 0% 0% 15%;
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+}
+
 .cabecalho__menu__link{
     font-family: 'montserrat', sans-serif;
     font-size: 24px;
@@ -34,7 +43,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8% 15%;
+    padding: 5% 15%;
 }
 
 .presentation__content{
