--- a/Portifolio-HTML-e-CSS-Curso3-aula_5/Portifolio-HTML-e-CSS-Curso3-aula_5/styles/style.css
+++ b/Portifolio-HTML-e-CSS-Curso3-aula_5/Portifolio-HTML-e-CSS-Curso3-aula_5/styles/style.css
@@ -40,7 +40,7 @@ body{
     justify-content: space-between;
 }
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
